--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -126,6 +126,7 @@
         padding: $space-md;
 
         &__wrap {
+            margin-top: 0;
             width: 100%;
             max-width: none;
             padding: $space-md;
